--- a/myApp/platforms/android/app/src/main/assets/www/index.html
+++ b/myApp/platforms/android/app/src/main/assets/www/index.html
@@ -1,49 +1,82 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
+<html lang="fr">
 
-    http://www.apache.org/licenses/LICENSE-2.0
+<head>
+    <meta charset="UTF-8">
+    <title>Liste de tâches</title>
 
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
-<html>
-    <head>
-        <!--
-        Customize this policy to fit your own app's needs. For more guidance, see:
-            https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
-        Some notes:
-            * gap: is required only on iOS (when using UIWebView) and is needed for JS->native communication
-            * https://ssl.gstatic.com is required only on Android and is needed for TalkBack to function properly
-            * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
-                * Enable inline JS: add 'unsafe-inline' to default-src
-        -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
-        <meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Hello World</title>
-    </head>
-    <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
-        <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-    </body>
+    <script src="lib/onsen/js/onsenui.js"></script>
+
+    <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/services.js"></script>
+    <script>
+        ons.platform.select('android');
+    </script>
+    <link rel="stylesheet" href="lib/onsen/css/onsenui.css">
+    <link rel="stylesheet" href="lib/onsen/css/onsen-css-components.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+    <!-- First navigation component: Navigator. This will remain always on top of the app. -->
+    <ons-navigator id="myNavigator" page="splitter.html">
+    </ons-navigator>
+
+
+    <!-- Second navigation component: Splitter. This will disappear if the first component changes its content. -->
+    <template id="splitter.html">
+        <ons-page>
+            <ons-splitter id="mySplitter">
+                <ons-splitter-side page="html/menu.html" swipeable width="250px" collapse swipe-target-width="50px">
+                </ons-splitter-side>
+                <ons-splitter-content page="tabbar.html">
+                </ons-splitter-content>
+            </ons-splitter>
+        </ons-page>
+    </template>
+
+    <!-- Third navigation component: Tabbar. This will disappear if the first or second components change their content. -->
+    <template id="tabbar.html">
+        <ons-page id="tabbarPage">
+            <ons-toolbar>
+                <div class="left">
+                    <!-- Toolbar-button with different icons depending on the platform. -->
+                    <ons-toolbar-button component="button/menu">
+                        <ons-icon icon="ion-navicon, material:md-menu" size="32px, material:24px"></ons-icon>
+                    </ons-toolbar-button>
+                </div>
+                <div class="center">À faire</div>
+                <div class="right">
+                    <!-- Toolbar-button  only visible for iOS/other. -->
+                    <ons-if platform="ios other">
+                        <ons-toolbar-button component="button/new-task">Nouvelle</ons-toolbar-button>
+                    </ons-if>
+                </div>
+            </ons-toolbar>
+
+            <!-- Floating Action Button only visible for Android. -->
+            <ons-if platform="android">
+                <ons-fab position="right bottom" component="button/new-task">
+                    <ons-icon icon="md-edit"></ons-icon>
+                </ons-fab>
+            </ons-if>
+
+            <!-- Auto-positioned Tabbar: top on Android, bottom on iOS/other. -->
+            <ons-tabbar id="myTabbar" position="auto">
+                <ons-tab page="html/pending_tasks.html" label="En attente" active>
+                </ons-tab>
+                <ons-tab page="html/active_tasks.html" label="En cours">
+                </ons-tab>
+                <ons-tab page="html/completed_tasks.html" label="Finies">
+                </ons-tab>
+            </ons-tabbar>
+        </ons-page>
+    </template>
+
+    <ons-bottom-toolbar modifier="transparent" id="footer"><p>Valentin RETTER & Tom MENDEZ</p></ons-bottom-toolbar>
+
+</body>
+
 </html>
