supprimer toutes les tâches

--- a/myApp/www/index.html
+++ b/myApp/www/index.html
@@ -61,6 +61,9 @@
                 <ons-fab position="right bottom" component="button/new-task">
                     <ons-icon icon="md-edit"></ons-icon>
                 </ons-fab>
+                <ons-fab position="left bottom" component="button/delete-selected">
+                    <ons-icon icon="md-block"></ons-icon>
+                </ons-fab>
             </ons-if>
 
             <!-- Auto-positioned Tabbar: top on Android, bottom on iOS/other. -->
