modifications de nouvelle tâche

--- a/myApp/platforms/android/app/src/main/assets/www/html/new_task.html
+++ b/myApp/platforms/android/app/src/main/assets/www/html/new_task.html
@@ -20,7 +20,12 @@
     </ons-list-item>
     <ons-list-item modifier="nodivider">
       <div class="center">
-        <ons-input id="category-input" type="text" placeholder="Catégorie" float></ons-input>
+        <ons-list id="list-item">
+          Catégories
+          <ons-list-item modifier="longdivider">
+            <ons-input id="category-input" type="text" placeholder="Nouvelle catégorie" float></ons-input>
+          </ons-list-item>
+        </ons-list>
       </div>
     </ons-list-item>
     <ons-list-item modifier="nodivider">
